--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
+    "@nextui-org/react": "^2.4.2",
+    "embla-carousel-autoplay": "^8.1.6",
+    "embla-carousel-react": "^8.1.6",
+    "framer-motion": "^11.2.13",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18"
